--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -26,42 +26,22 @@
 
                             <div>
                                 <a href="#" class="nav-link">
-                                    <svg width="33" height="30" viewBox="0 0 33 30" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M9.87793 0.140625L16.543 20.915L23.1875 0.140625H32.6621V30H25.4434V23.0273L26.1406 8.75391L18.9219 30H14.1641L6.9248 8.7334L7.62207 23.0273V30H0.423828V0.140625H9.87793Z"
-                                            fill="#E5E5E5" />
-                                    </svg>
+                                    <img src="./assets/images/M.png" alt="Menu">
                                 </a>
                             </div>
                             <div>
                                 <a href="#" class="nav-link">
-                                    <svg width="32" height="28" viewBox="0 0 32 28" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M16 0C7.16406 0 0 5.82031 0 13C0 16.1016 1.33594 18.9375 3.5625 21.1719C2.78125 24.3203 0.171875 27.125 0.140625 27.1562C0 27.2969 -0.0390625 27.5156 0.046875 27.7031C0.124937 27.8906 0.296875 28 0.5 28C4.64062 28 7.75 26.0156 9.28906 24.7891C11.3281 25.5547 13.6016 26 16 26C24.8359 26 32 20.1797 32 13C32 5.82031 24.8359 0 16 0ZM8 15C6.89062 15 6 14.1094 6 13C6 11.8906 6.89062 11 8 11C9.10938 11 10 11.8906 10 13C10 14.1094 9.10938 15 8 15ZM16 15C14.8906 15 14 14.1094 14 13C14 11.8906 14.8906 11 16 11C17.1094 11 18 11.8906 18 13C18 14.1094 17.1094 15 16 15ZM24 15C22.8906 15 22 14.1094 22 13C22 11.8906 22.8906 11 24 11C25.1094 11 26 11.8906 26 13C26 14.1094 25.1094 15 24 15Z"
-                                            fill="#EEEEF6" />
-                                    </svg>
+                                    <img src="./assets/images/bubble.png" alt="Chat with people">
                                 </a>
                             </div>
                             <div>
                                 <a href="#" class="nav-link">
-                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M16.0071 20C13.1364 20 10.8093 17.0898 10.8093 13.5C10.8093 9.91013 13.1363 7 16.0071 7C18.8774 7 21.2048 9.91013 21.2048 13.5C21.2048 17.0898 18.8775 20 16.0071 20ZM13.5057 22L18.4944 22C22.4185 22 25.6 25.7308 25.6 30.3333C25.6 31.2537 24.9637 32 24.1789 32L7.8211 32C7.03635 32 6.4 31.2537 6.4 30.3333C6.4 25.7308 9.58115 22 13.5057 22ZM6.4 10C4.1908 10 2.4 7.76138 2.4 5C2.4 2.23863 4.1908 2.43116e-06 6.4 2.23802e-06C8.609 2.04491e-06 10.4 2.23863 10.4 5C10.4 7.76138 8.609 10 6.4 10ZM22.8047 13.5C22.8047 13.1594 22.7556 12.8357 22.7242 12.5055C23.2694 12.1854 23.8694 12 24.504 12L27.596 12C30.0281 12 32 14.6116 32 17.8333C32 18.4776 31.6057 19 31.1193 19L21.1465 19C22.1656 17.5132 22.8047 15.6072 22.8047 13.5ZM25.6 10C23.3908 10 21.6 7.76138 21.6 5C21.6 2.23863 23.3908 7.5264e-07 25.6 5.59506e-07C27.809 3.66389e-07 29.6 2.23863 29.6 5C29.6 7.76138 27.809 10 25.6 10ZM4.404 12L7.496 12C8.13605 12 8.74025 12.1898 9.28895 12.515C9.2583 12.8422 9.2093 13.1628 9.2093 13.5C9.2093 15.6072 9.84835 17.5132 10.8675 19L0.88075 19C0.39435 19 1.61536e-06 18.4776 1.55903e-06 17.8333C1.27738e-06 14.6116 1.9717 12 4.404 12Z"
-                                            fill="#EEEEF6" />
-                                    </svg>
+                                    <img src="./assets/images/people.png" alt="Go to groups">
                                 </a>
                             </div>
                             <div>
                                 <a href="#" class="nav-link ">
-                                    <svg width="25" height="28" viewBox="0 0 25 28" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M0 14C0 6.26175 6.26619 0 13.9871 0C14.6974 0 15.843 0.10425 16.5431 0.234125C17.1441 0.345187 17.2773 1.14844 16.7479 1.44919C13.3144 3.406 11.2023 7.03762 11.2023 10.9871C11.2023 17.8435 17.4343 23.0508 24.2196 21.7571C24.8172 21.6443 25.2372 22.3399 24.8513 22.8166C22.2407 26.0347 18.3017 28 13.9871 28C6.25594 28 0 21.728 0 14Z"
-                                            fill="#EEEEF6" />
-                                    </svg>
+                                    <img src="./assets/images/moon.png" alt="Moon">
                                 </a>
                             </div>
 
@@ -77,10 +57,7 @@
                             </div>
 
                             <div class="col-auto">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="10" cy="10" r="10" fill="#ED2460" />
-                                </svg>
+                                <img src="./assets/images/circle.png" alt="Notifications">
 
                             </div>
                         </div>
@@ -97,10 +74,7 @@
 
                         <div class="row bg-secondary">
                             <div class="col-2">
-                                <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="15" cy="15" r="15" fill="#ED2460" />
-                                </svg>
+                                <img src="./assets/images/profile_pic.png" alt="Profile picture">
                             </div>
                             <div class="col-10">
                                 <div>
@@ -112,10 +86,9 @@
 
                         <!--.row.bg-secondary>.col-2+.col-10>div>div>strong.mr-auto{Nix Golddigger}+small{2h ago}^div{Second sample message}-->
                         <div class="row bg-secondary">
-                            <div class="col-2"><svg width="30" height="30" viewBox="0 0 30 30" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="15" cy="15" r="15" fill="#ED2460" />
-                                </svg></div>
+                            <div class="col-2">
+                                <img src="./assets/images/profile_pic.png" alt="Profile picture">
+                            </div>
                             <div class="col-10">
                                 <div>
                                     <div><strong class="mr-auto">Nix Golddigger</strong><small>2h ago</small></div>
@@ -123,46 +96,23 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
                     </div>
                 </div>
-
-
             </div>
-
-
 
             <div class="col-8">
                 <!--nav.navbar.navbar-light.bg-secondary>form.d-flex>input.form-control.me-2+span.input-group-text"-->
                 <nav class="navbar navbar-light bg-secondary">
-
                     <form class="d-flex"><input type="text" class="form-control me-2">
-                        <span class="input-group-text"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M23.6705 21.0188L17.8417 15.19C18.8884 13.636 19.5 11.7645 19.5 9.75C19.5 4.36523 15.1348 0 9.75 0C4.36523 0 0 4.36523 0 9.75C0 15.1348 4.36523 19.5 9.75 19.5C11.7645 19.5 13.636 18.8884 15.19 17.8417L21.0188 23.6705C21.4582 24.1099 22.1705 24.1099 22.6099 23.6705L23.6705 22.6099C24.1099 22.1705 24.1099 21.4582 23.6705 21.0188ZM3.75 9.75C3.75 6.44156 6.44156 3.75 9.75 3.75C13.0584 3.75 15.75 6.44156 15.75 9.75C15.75 13.0583 13.0584 15.75 9.75 15.75C6.44156 15.75 3.75 13.0583 3.75 9.75Z"
-                                    fill="#6D6DB4" />
-                            </svg>
-
-                        </span>
+                        <img class="input-group-text" src="./assets/images/search.png" alt="Search">
                     </form>
-
-
                 </nav>
-
-
-
 
                 <!--.row>.col-1+.col-4+.col-4+.col-1-->
                 <div class="row">
                     <div class="col-1">
 
-                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="15" cy="15" r="15" fill="#ED2460" />
-                        </svg>
+                        <img src="./assets/images/profile_pic.png" alt="Profile picture">
                     </div>
 
 
@@ -193,53 +143,26 @@
 
                     </div>
                     <div class="col-1">
-                        <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="15" cy="15" r="15" fill="#ED2460" />
-                        </svg>
+                        <img src="./assets/images/profile_pic.png" alt="Profile picture">
                     </div>
                 </div>
 
                 <!--.input-group.mb-3>input.form-control.boder-dark+span.input-group-text-->
-                <div class="input-group mb-3">
+                <div class="input-group">
 
                     <input type="text" class="form-control border-dark">
 
-                    <span class="input-group-text">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M23.9824 1.72792L20.9824 21.2278C20.9121 21.6841 20.6367 22.0818 20.2339 22.3081C20.0068 22.4355 19.7534 22.5 19.5 22.5C19.3037 22.5 19.1089 22.4619 18.9228 22.3843L13.174 19.989L10.79 23.5649C10.6089 23.8368 10.3038 24 9.97703 24C9.4374 24 8.99996 23.5625 8.99996 23.0229V18.5147C8.99996 18.1811 9.11115 17.8571 9.31595 17.5938L19.5 4.50016L5.73437 16.8891L0.92284 14.8843C0.395496 14.6646 0.0380742 14.1636 0.0029179 13.5931C-0.0322383 13.0225 0.259277 12.4813 0.755824 12.1978L21.7558 0.197924C22.2568 -0.0884353 22.875 -0.0620915 23.3496 0.263831C23.8242 0.589753 24.0703 1.15886 23.9824 1.72792Z"
-                                fill="#4849A1" fill-opacity="0.8" />
-                        </svg>
-
-                    </span>
+                    <img class="input-group-text" src="./assets/images/send.png" alt="Send a message">
 
 
+                    <img class="input-group-addon" src="./assets/images/attachment.png" alt="Choose a file">
 
-                    <span class="input-group-addon">
-
-                        <svg width="15" height="24" viewBox="0 0 15 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M14.6667 5.99997V15.75C14.6667 20.571 10.9719 24.4393 6.60075 23.9597C2.79108 23.5417 0 19.6888 0 15.3826V9.74997C0 9.33568 0.2985 8.99997 0.666667 8.99997H2C2.36817 8.99997 2.66667 9.33568 2.66667 9.74997V15.5989C2.66667 18.1042 4.17154 20.3841 6.35313 20.8869C9.35246 21.5781 12 19.0049 12 15.75V6.16769C12 4.67284 11.0949 3.28431 9.78379 3.04173C8.11483 2.73292 6.66667 4.17925 6.66667 5.99997V14.25C6.66667 14.6638 6.9655 15 7.33333 15C7.70117 15 8 14.6638 8 14.25V6.74997C8 6.33569 8.2985 5.99997 8.66667 5.99997H10C10.3682 5.99997 10.6667 6.33569 10.6667 6.74997V14.0282C10.6667 15.9894 9.41608 17.7807 7.68179 17.9799C5.68833 18.2088 4 16.4469 4 14.25V6.2673C4 3.13549 6.02979 0.333392 8.80046 0.0292675C11.9795 -0.319623 14.6667 2.49377 14.6667 5.99997Z"
-                                fill="#6D6DB4" />
-                        </svg>
-                    </span>
-                    <span class="input-group-addon">
-                        <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M21 0.5H3C1.34316 0.5 0 1.84316 0 3.5V18.5C0 20.1568 1.34316 21.5 3 21.5H21C22.6568 21.5 24 20.1568 24 18.5V3.5C24 1.84316 22.6568 0.5 21 0.5ZM5.25 3.5C6.49266 3.5 7.5 4.50744 7.5 5.75C7.5 6.99256 6.49266 8 5.25 8C4.00734 8 3 6.99256 3 5.75C3 4.50744 4.00734 3.5 5.25 3.5ZM20.9119 18.104C20.7814 18.3478 20.5272 18.5 20.2507 18.5H3.84436C3.56212 18.5 3.30375 18.3416 3.17587 18.0898C3.04786 17.8383 3.07205 17.5362 3.23841 17.3082L6.51966 12.8082C6.66084 12.6144 6.88603 12.5 7.12566 12.5C7.36528 12.5 7.59047 12.6144 7.73161 12.8082L9.25294 14.8947L13.6266 8.33398C13.7657 8.12525 13.9999 8 14.2507 8C14.5014 8 14.7356 8.12525 14.8747 8.33398L20.8747 17.334C21.0281 17.5641 21.0424 17.8601 20.9119 18.104Z"
-                                fill="#6D6DB4" />
-                        </svg>
-
-                    </span>
+                    <img class="input-group-addon" src="./assets/images/photo.png" alt="Choose a photo">
                 </div>
 
             </div>
         </div>
     </div>
-
-
-
-
 
 </body>
 
