--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,6 +51,9 @@
     .menu-bar__icon {
     padding-top:1rem;
     text-align:center;
+
+    transition: all 500ms ease;
+    
     }
     
     .menu-bar__icon-m {
@@ -61,9 +64,26 @@
     margin-top:auto;
     padding-bottom:1rem;
     vertical-align:bottom;
-    
     text-align:center;
+
+    transition: all 500ms ease;
     }
+
+    .menu-bar__icon:hover {
+        transform:scale(1.3);
+        filter: drop-shadow(0 0 1rem var(--white));
+        
+        
+
+    }
+
+    .menu-bar__icon-dark-mode:hover {
+        transform:scale(1.3);
+        filter: drop-shadow(0 0 1rem var(--white));
+    }
+
+    
+
     
     .notification {
     display:flex;
@@ -153,11 +173,21 @@
     flex-direction:column;
     width:80%;
     }
-    
+
+        
     .search-form {
     display:flex;
     padding:0 0 1rem 2rem;
     width:70%;
+    }
+
+    .search-form__label{
+        position:absolute;
+        left:-10000px;
+        top:auto;
+        width:1px;
+        height:1px;
+        overflow:hidden;
     }
     
     .search-form__input {
